--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -6,4 +6,7 @@
 @import 'base/typography';
 @import 'base/utilities';
 
+@import 'layout/content';
+@import 'layout/header';
+
 // @import "layout/grid";
