--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -2,6 +2,8 @@
 $color-ow-orange: rgb(249,158,26);
 $color-ow-grey: rgb(67,72,76);
 $color-ow-dark-blue: rgb(64,82,117);
+$color-ow-grey-rgba: rgba(67,72,76, 1);
+$color-ow-dark-blue-rgba: rgba(64,82,117,1);
 $color-ow-light-blue: rgb(33,143,254);
 $color-ow-black: rgb(0,0,0);
 
