--- a/client/src/sass/layout/_header.scss
+++ b/client/src/sass/layout/_header.scss
@@ -1,3 +1,6 @@
 .header{
     text-align: center;
+    background-color: $color-ow-light-blue;
+    border-bottom: 1px solid black;
+    height: 15rem;
 }
