--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,10 +6,13 @@
   box-sizing: inherit; }
 
 html {
+  height: 100%;
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box; }
+  height: 100%;
+  box-sizing: border-box;
+  background: linear-gradient(to top, #43484c, #405275); }
 
 h1 {
   font-size: 2.8em; }
@@ -37,5 +40,18 @@ a {
 .content {
   border: 1px solid black; }
 
+.app-wrapper {
+  height: auto;
+  min-height: 100%; }
+
+.container {
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 1px solid black;
+  margin: 2rem;
+  padding: 1rem; }
+
 .header {
-  text-align: center; }
+  text-align: center;
+  background-color: #218ffe;
+  border-bottom: 1px solid black;
+  height: 15rem; }
