--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -7,6 +7,7 @@
 @import 'base/utilities';
 
 @import 'layout/content';
+@import 'layout/container';
 @import 'layout/header';
 
 // @import "layout/grid";
