significant progress, database populating seasons as intended and found more efficiency passing seasons after initial population. now to solve update problem on creation of season, but should be solved via get accounts action on componentdidupdate. also cleaned up codebase, deleted some unecessary actyions and reducers

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,11 +44,17 @@ a {
   height: auto;
   min-height: 100%; }
 
+.season {
+  border: 1px solid black; }
+
 .container {
   background-color: rgba(255, 255, 255, 0.2);
   border: 1px solid black;
   margin: 2rem;
   padding: 1rem; }
+
+.seasons__yes--saved-account {
+  border: 1px solid black; }
 
 .header {
   text-align: center;
