code cleanup as i came across it and added most of support for bare minimum of adding and appending games to seasons. then will begin math functionality work, and cleaning up any bugs once the whole structure of how the app is supposed to work is taken into place. then, we work on graphing data and adding any features we missed, like additional heros played in a match? and finally, styling the app, and deployment.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,3 +61,8 @@ a {
   background-color: #218ffe;
   border-bottom: 1px solid black;
   height: 15rem; }
+
+.game-table {
+  margin: 2rem;
+  padding: 2rem;
+  border: 2px dotted black; }
