--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -4,6 +4,7 @@
 
 @import 'base/base';
 @import 'base/typography';
+@import url('https://fonts.googleapis.com/css?family=Concert+One|Questrial');
 @import 'base/utilities';
 
 @import 'layout/content';
@@ -11,4 +12,5 @@
 @import 'layout/header';
 
 @import 'components/game-table';
+@import 'components/btn';
 // @import "layout/grid";
