--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,4 +1,10 @@
 //colors
+@import url(https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Pathway+Gothic+One);
+
+
+$header-font: 'Pathway Gothic One', sans-serif;
+$body-font:  'Work Sans', sans-serif;
+
 $color-ow-orange: rgb(249,158,26);
 $color-ow-grey: rgb(67,72,76);
 $color-ow-dark-blue: rgb(64,82,117);
