--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -13,6 +13,8 @@ html{
 
 body {
     height: 100%;
+    font-family: $body-font;
+    letter-spacing: .2rem;
     box-sizing: border-box;
     background: linear-gradient(to top, $color-ow-grey-rgba, $color-ow-dark-blue-rgba)
 }
