--- a/client/src/sass/layout/_container.scss
+++ b/client/src/sass/layout/_container.scss
@@ -9,6 +9,11 @@
         &--saved-account {
             border: 1px solid black;
         }
-        
     }
+    &__no {
+        &---saved-account{
+            border:  1px dotted black
+        }
+    }
+
 }
