--- a/client/src/sass/layout/_content.scss
+++ b/client/src/sass/layout/_content.scss
@@ -1,11 +1,7 @@
 .content {
  border: 1px solid black;   
 }
-.app-wrapper{
-    height: auto;
-    min-height: 100%;
-}
-
-.season {
-    border: 1px solid black
-}
+// .app-wrapper{
+//     height: auto;
+//     min-height: 100%;
+// }
