--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -9,11 +9,12 @@
 html{
     height: 100%;
     font-size: 62.5%;
+    font-family: $header-font;
 }
 
 body {
-    height: 100%;
     font-family: $body-font;
+    height: 100%;
     letter-spacing: .2rem;
     box-sizing: border-box;
     background: linear-gradient(to top, $color-ow-grey-rgba, $color-ow-dark-blue-rgba)
