--- a/client/src/sass/base/_typography.scss
+++ b/client/src/sass/base/_typography.scss
@@ -5,15 +5,16 @@ h1 {
 
 .banner-text {
     font-size: 9rem;
-    font-family: $header-font;
     letter-spacing: 1.2rem;
 }
 
 h2 {
-    font-size: $default-heading-2-size;
+    font-family: $body-font;
+    font-size: 1.2rem;
 }
 
 p {
+    font-family: $body-font;
     text-indent: 1rem;
     font-size: $default-font-size
 }
@@ -21,10 +22,12 @@ p {
 ol,
 li,
 ul {
+    font-family: $body-font;
     text-indent: 5rem;
     font-size: $default-font-size;
 }
 
 a {
+    font-family: $body-font;
     font-size: $default-font-size;
 }
