--- a/client/src/sass/components/_btn.scss
+++ b/client/src/sass/components/_btn.scss
@@ -1,6 +1,9 @@
-.btn{
-    padding: .3rem;
+.btn {
+    padding: .5rem;
     border: 1px solid black;
     width: auto;
     height: auto;
+    &--open-battletag {
+        margin-left: 1rem;
+    }
 }
