--- a/client/src/sass/layout/_header.scss
+++ b/client/src/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    font-family: $header-font;
     text-align: center;
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
