--- a/client/src/sass/components/_btn.scss
+++ b/client/src/sass/components/_btn.scss
@@ -3,7 +3,13 @@
     border: 1px solid black;
     width: auto;
     height: auto;
+
     &--open-battletag {
         margin-left: 1rem;
+    }
+
+    &--new-season {
+        width: 15rem;
+        height: auto;
     }
 }
