added more css changes i think (today??) and added crude logic to heros focused selections with icons. will add css highlights and shit. need to really thinkg about all the actions ill need to reset forms like ive done with the season form, and i need to approach figuring out how to selectively purge the redux store persistor and or selectively persist data. the latter is likely the better option as ive had problems in the past calling persistor.purge() where and how i want to other than passing it directly into persistgate.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,8 +92,9 @@ a {
   padding: 1rem;
   border: 1px solid black; }
 
-.season {
-  margin: 1rem;
+.season__cell {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   padding: 1rem;
   border: 1px solid black;
   display: flex;
@@ -113,6 +114,10 @@ a {
     display: flex;
     flex-direction: column; }
   .game-table__cell {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
     padding: 1rem;
     margin-bottom: 1rem;
     border: 1px solid black; }
