--- a/client/src/sass/components/_btn.scss
+++ b/client/src/sass/components/_btn.scss
@@ -12,4 +12,9 @@
         width: 15rem;
         height: auto;
     }
+
+    &--close-modal{
+        position: absolute;
+        bottom: 5rem;;
+    }
 }
