--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -1,10 +1,14 @@
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
+
 @import 'base/base';
 @import 'base/typography';
 @import 'base/utilities';
+
+@import 'components/battletag-form';
 @import 'components/btn';
+
 @import 'layout/content';
 @import 'layout/container';
 @import 'layout/header';
