--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,10 +1,4 @@
 //colors
-@import url(https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Pathway+Gothic+One);
-
-
-$header-font: 'Pathway Gothic One', sans-serif;
-$body-font:  'Work Sans', sans-serif;
-
 $color-ow-orange: rgb(249,158,26);
 $color-ow-grey: rgb(67,72,76);
 $color-ow-dark-blue: rgb(64,82,117);
@@ -13,6 +7,7 @@ $color-ow-dark-blue-rgba: rgba(64,82,117,1);
 $color-ow-light-blue: rgb(33,143,254);
 $color-ow-black: rgb(0,0,0);
 
+//defaults
 $color-white: #fff;
 $color-black: #000;
 
@@ -21,7 +16,3 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
 
-//fontsize
-$default-font-size: 1.8rem;
-$default-heading-size: 2.8em;
-$default-heading-2-size: 2.4rem;
