--- a/client/src/sass/base/_typography.scss
+++ b/client/src/sass/base/_typography.scss
@@ -1,33 +1,57 @@
+//fontsize
+@import url("https://fonts.googleapis.com/css?family=Maven+Pro");
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Fredoka+One|Permanent+Marker");
 
-h1 {
-    font-size: $default-heading-size; // text-decoration: underline;
-}
+//core fonts
+$header-font: "Pathway Gothic One", sans-serif;
+$body-font: "Work Sans", sans-serif;
+//other fonts
+$permanent-marker-font: "Permanent Marker", cursive;
+$fredoka-one-font: "Fredoka One", cursive;
+$montserrat-font: "Montserrat", sans-serif;
+
+//font sizing
+$default-font-size: 1.8rem;
+$default-h1-size: 4rem;
+$default-h2-size: 3rem;
+
+//headings
 
 .banner-text {
-    font-size: 9rem;
-    letter-spacing: 1.2rem;
+  font-variant: normal;
+  font-family: $header-font;
+  font-weight: 900;
+  font-size: 7.3rem;
+}
+h1,
+h2,
+h3 {
+
+  font-weight: bold;
+  border-bottom: .2rem solid black;
+  text-underline-position: above;
+}
+
+h1 {
+  font-size: $default-h1-size;
 }
 
 h2 {
-    font-family: $body-font;
-    font-size: 1.2rem;
+  font-size: $default-h2-size;
 }
 
+.prop{
+  font-family:  $body-font;
+  font-variant: small-caps;
+}
 p {
-    font-family: $body-font;
-    text-indent: 1rem;
-    font-size: $default-font-size
+  font-weight: bold;
+  font-size: $default-font-size;
 }
-
 ol,
 li,
 ul {
-    font-family: $body-font;
-    text-indent: 5rem;
-    font-size: $default-font-size;
-}
-
-a {
-    font-family: $body-font;
-    font-size: $default-font-size;
+  font-weight: bold;
+  font-size: $default-font-size;
 }
