--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,10 +1,10 @@
 //colors
-$color-ow-orange: rgb(249,158,26);
+$color-ow-orange: rgb(211, 135, 21);
 $color-ow-grey: rgb(67,72,76);
 $color-ow-dark-blue: rgb(64,82,117);
 $color-ow-grey-rgba: rgba(67,72,76, 1);
 $color-ow-dark-blue-rgba: rgba(64,82,117,1);
-$color-ow-light-blue: rgb(33,143,254);
+$color-ow-light-blue: rgb(35, 121, 207);
 $color-ow-black: rgb(0,0,0);
 
 //defaults
