--- a/client/src/sass/layout/_container.scss
+++ b/client/src/sass/layout/_container.scss
@@ -1,20 +1,18 @@
 .container {
-    background-color: rgba(255, 255, 255, 0.2);
-    border: 1px solid black;
-    margin: 2rem;
-    padding: 1rem;
-    line-height: 4rem;
+  background-color: $color-ow-dark-blue;
+  border: 1px solid black;
+  margin: 2rem;
+  padding: 1rem;
+  line-height: 4rem;
+  display: flex;
+  overflow: none;
+  &--main {
+    flex-direction: column;
+  }
 
-    &--main{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    &--notfound{
-        flex-direction: column;
-        align-items: center;
-    }
+  &--notfound {
+    flex-direction: column;
+  }
 }
 
 // .active-account {
