--- a/client/src/sass/pages/_main.scss
+++ b/client/src/sass/pages/_main.scss
@@ -1,8 +1,17 @@
-.battletags {
+.main-info{
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: space-between;
-  text-align: center;
-  line-height: 3rem;
+  margin: 0 0 1rem 0;
+}
+.battletags {
+  margin: 1rem 0 1rem 0;
+  &__yes {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+    &--tag {
+      // margin: 1rem;
+      border: 0.1rem solid black;
+    }
+  }
 }
