--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -20,4 +20,5 @@ body {
     background: $color-ow-grey;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    line-height: 3rem;
 }
