--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,7 +53,8 @@ body {
   box-sizing: border-box;
   background: #43484c;
   background-repeat: no-repeat;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  line-height: 3rem; }
 
 .u-margin-bottom-small {
   margin-bottom: 2rem; }
@@ -80,17 +81,18 @@ body {
     flex-direction: column; }
 
 .header {
+  background: #405275;
+  color: rgba(255, 255, 255, 0.9);
+  line-height: 10rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   text-align: center;
-  color: rgba(255, 255, 255, 0.9);
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  background: #405275;
   border-bottom: 1px solid black;
-  height: 18vh;
-  overflow: none; }
+  overflow: none;
+  padding: 0 0 1rem 0; }
 
 .account-form {
   display: flex;
@@ -111,8 +113,6 @@ body {
 .btn {
   padding: .5rem;
   border: 1px solid black;
-  width: auto;
-  height: auto;
   font-variant-caps: all-petite-caps; }
   .btn--new-season {
     width: 15rem;
@@ -127,18 +127,20 @@ body {
   .btn--open-battletag {
     width: 25rem;
     border: .1rem solid black;
-    margin: 0 1rem 0 1rem; }
+    margin: 1rem; }
+  .btn--login {
+    padding: .5rem 0 .5rem 0;
+    width: 10rem;
+    align-self: center; }
 
 .main-info {
   display: flex;
-  flex-direction: column;
-  margin: 0 0 1rem 0; }
+  flex-direction: column; }
 
 .battletags {
   margin: 1rem 0 1rem 0; }
   .battletags__yes {
     display: flex;
-    flex-flow: column;
-    align-items: center; }
-    .battletags__yes--tag {
-      border: 0.1rem solid black; }
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    margin: 1rem 1rem 1rem 5%; }
