--- a/client/src/sass/layout/_header.scss
+++ b/client/src/sass/layout/_header.scss
@@ -1,13 +1,14 @@
 .header {
+    background: $color-ow-dark-blue;
+    color: rgba(255, 255, 255, .9);
+    line-height: 10rem;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     text-align: center;
-    color: rgba(255, 255, 255, .9);
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    background: $color-ow-dark-blue;
     border-bottom: 1px solid black;
-    height: 18vh;
     overflow: none;
+    padding: 0 0 1rem 0;
 }
